// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBuildComparisonMatrix gets a matrix 1`] = `
Array [
  Array [
    "",
    "1234567",
    "8901234",
    "𝚫 1234567",
    "5678901",
    "𝚫 8901234",
    "𝚫 1234567",
  ],
  Array [
    "churros",
    Object {
      "gzipSize": 90,
      "hash": "abc",
      "size": 456,
    },
    undefined,
    Object {
      "gzipSize": -90,
      "gzipSizePercent": 1,
      "hashChanged": true,
      "size": -456,
      "sizePercent": 1,
    },
    undefined,
    Object {
      "gzipSize": -90,
      "gzipSizePercent": 1,
      "hashChanged": true,
      "size": -456,
      "sizePercent": 1,
    },
    Object {
      "gzipSize": 0,
      "gzipSizePercent": 0,
      "hashChanged": true,
      "size": 0,
      "sizePercent": 0,
    },
  ],
  Array [
    "tacos",
    Object {
      "gzipSize": 45,
      "hash": "abc",
      "size": 123,
    },
    Object {
      "gzipSize": 45,
      "hash": "abc",
      "size": 123,
    },
    Object {
      "gzipSize": 0,
      "gzipSizePercent": 1,
      "hashChanged": false,
      "size": 0,
      "sizePercent": 1,
    },
    Object {
      "gzipSize": 45,
      "hash": "abc",
      "size": 123,
    },
    Object {
      "gzipSize": 0,
      "gzipSizePercent": 1,
      "hashChanged": false,
      "size": 0,
      "sizePercent": 1,
    },
    Object {
      "gzipSize": 0,
      "gzipSizePercent": 1,
      "hashChanged": false,
      "size": 0,
      "sizePercent": 1,
    },
  ],
  Array [
    "burritos",
    undefined,
    Object {
      "gzipSize": 93,
      "hash": "def",
      "size": 469,
    },
    Object {
      "gzipSize": 93,
      "gzipSizePercent": 0,
      "hashChanged": true,
      "size": 469,
      "sizePercent": 0,
    },
    Object {
      "gzipSize": 85,
      "hash": "ghi",
      "size": 345,
    },
    Object {
      "gzipSize": 85,
      "gzipSizePercent": 0,
      "hashChanged": true,
      "size": 345,
      "sizePercent": 0,
    },
    Object {
      "gzipSize": -8,
      "gzipSizePercent": 0.9139784946236559,
      "hashChanged": true,
      "size": -124,
      "sizePercent": 0.7356076759061834,
    },
  ],
]
`;

exports[`getBuildDeltas returns an array of BuildDeltas 1`] = `
Array [
  Object {
    "artifactDeltas": Array [],
    "deltas": Array [],
    "meta": Object {
      "sha": "1234567",
    },
  },
  Object {
    "artifactDeltas": Array [
      Object {
        "burritos": Object {
          "gzipSize": 93,
          "gzipSizePercent": 0,
          "hashChanged": true,
          "size": 469,
          "sizePercent": 0,
        },
        "churros": Object {
          "gzipSize": -90,
          "gzipSizePercent": 1,
          "hashChanged": true,
          "size": -456,
          "sizePercent": 1,
        },
        "tacos": Object {
          "gzipSize": 0,
          "gzipSizePercent": 1,
          "hashChanged": false,
          "size": 0,
          "sizePercent": 1,
        },
      },
    ],
    "deltas": Array [],
    "meta": Object {
      "sha": "8901234",
    },
  },
  Object {
    "artifactDeltas": Array [
      Object {
        "burritos": Object {
          "gzipSize": 85,
          "gzipSizePercent": 0,
          "hashChanged": true,
          "size": 345,
          "sizePercent": 0,
        },
        "churros": Object {
          "gzipSize": -90,
          "gzipSizePercent": 1,
          "hashChanged": true,
          "size": -456,
          "sizePercent": 1,
        },
        "tacos": Object {
          "gzipSize": 0,
          "gzipSizePercent": 1,
          "hashChanged": false,
          "size": 0,
          "sizePercent": 1,
        },
      },
      Object {
        "burritos": Object {
          "gzipSize": -8,
          "gzipSizePercent": 0.9139784946236559,
          "hashChanged": true,
          "size": -124,
          "sizePercent": 0.7356076759061834,
        },
        "churros": Object {
          "gzipSize": 0,
          "gzipSizePercent": 0,
          "hashChanged": true,
          "size": 0,
          "sizePercent": 0,
        },
        "tacos": Object {
          "gzipSize": 0,
          "gzipSizePercent": 1,
          "hashChanged": false,
          "size": 0,
          "sizePercent": 1,
        },
      },
    ],
    "deltas": Array [],
    "meta": Object {
      "sha": "5678901",
    },
  },
]
`;
